k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datetime-app-service
spec:
  type: ClusterIP
  selector:
    app: datetime-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
