k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datetime-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: datetime.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datetime-app-service
                port:
                  number: 80
